<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMeasurement">
    <ScrollView
        android:id="@+id/add_measurement_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/submit_button">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/date_measured_title"
                />
            <Button
                android:id="@+id/select_date_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_measured_button"
                android:onClick="dateButtonOnClick"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/time_measured_title"
                />
            <Button
                android:id="@+id/select_time_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_measured_button"
                android:onClick="timeButtonOnClick"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/systolic_measured"
                />
            <EditText
                android:id="@+id/systolic_pressure_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/systolic_hint"
                android:textAlignment="center"
                android:inputType="numberDecimal"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/diastolic_measured"
                />
            <EditText
                android:id="@+id/diastolic_pressure_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/diastolic_hint"
                android:textAlignment="center"
                android:inputType="numberDecimal"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/heart_rate_measured"
                />
            <EditText
                android:id="@+id/heart_rate_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/heart_rate_hint"
                android:textAlignment="center"
                android:inputType="numberDecimal"
                android:background=""
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/comment_title"
                />
            <EditText
                android:id="@+id/comments_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comment_hint"
                android:textAlignment="center"
                android:inputType="textMultiLine"
                />
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="submitButtonOnClick"/>

</android.support.constraint.ConstraintLayout>